Modificacion estilo de la lista

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -787,7 +787,17 @@ a.text-dark:hover {
   -ms-transform: rotate(-180deg);
   transform: rotate(-180deg);
 }
-
-
-
 /*** ===================================================== ***/
+
+
+/** Color de tablas */
+
+.table.table-colored {
+    border-bottom-color: #F48228;
+}
+
+.table-colored > thead > tr > th {
+    border-color: #F48228 !important;
+    background-color: #F48228 !important;
+    color: #fff !important;
+}
