--- a/public/css/atiempo.css
+++ b/public/css/atiempo.css
@@ -85,6 +85,24 @@ ul.wysihtml5-toolbar a.btn.wysihtml5-command-active,
     background-color: #e2f0f6;
 }
 
+.table thead > tr > th {
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.table thead > tr > th > small {
+    font-weight: 400;
+    font-size: 75%;
+}
+
+.table thead > tr > th,
+.table thead > tr > td,
+.table tfoot > tr > th,
+.table tfoot > tr > td {
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
+
 blockquote,
 .table thead > tr > th,
 .table tbody > tr > th,
@@ -498,15 +516,19 @@ fieldset[disabled] .btn-primary.active:focus {
     border-color: #33bcf2;
 }
 
+.text-white{
+    color: #fff;
+}
+
 /* Botton con Transiciones */
 .btn-icon {
     position: relative;
     border-bottom: 1px solid #fff;
-    height: 45px;
+    height: 50px;
 }
 
 .sp-icon {
-    top: 5px;
+    top: 7px;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -517,7 +539,6 @@ fieldset[disabled] .btn-primary.active:focus {
     -moz-transform: translateX(-10%);
     -ms-transform: translateX(-10%);
     transform: translateX(-10%);
-
 }
 
 .btn-icon:hover .sp-icon {
@@ -532,10 +553,11 @@ fieldset[disabled] .btn-primary.active:focus {
 }
 
 .sp-text {
-    top: 5px;
+    top: 30%;
     position: absolute;
-    width: 100%;
+    width: 90%;
     height: 100%;
+    line-height: 16px;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     transition: all 0.3s;
@@ -550,6 +572,59 @@ fieldset[disabled] .btn-primary.active:focus {
     -moz-transform: translateX(20%);
     -ms-transform: translateX(20%);
     transform: translateX(20%);
+}
+
+.sidebar-user-avatar {
+    width: 58px;
+    height: 58px;
+    float: left;
+    padding: 2px;
+    margin-left: -74px;
+    border-radius: 34px;
+    background: rgba(255, 255, 255, 0.75);
+}
+
+/* Imagen avatar*/
+.sidebar-user-avatar img {
+    width: 54px;
+    height: 54px;
+    border-radius: 32px;
+}
+
+/** Color de tablas **/
+.table.table-colored {
+    border-bottom-color: #6DCFF6;
+}
+.table-colored > thead > tr > th {
+    border-color: #6DCFF6 !important;
+    background-color: #6DCFF6 !important;
+    color: #fff !important;
+}
+
+tfoot input {
+    width: 100%;
+    padding: 3px;
+    box-sizing: border-box;
+}
+
+.non_searchable input {
+    display: none;
+}
+
+table.dataTable thead .sorting_asc:after {
+    content: "\e155";
+    display: none;
+}
+
+table.dataTable thead .sorting:after {
+    opacity: 0.2;
+    content: "\e150";
+    display: none;
+}
+
+table.dataTable thead .sorting_desc:after {
+    content: "\e156";
+    display: none;
 }
 
 
