--- a/public/css/atiempo.css
+++ b/public/css/atiempo.css
@@ -542,7 +542,7 @@ fieldset[disabled] .btn-primary.active:focus {
 .btn-circle.btn-sm {
   width: 26px;
   height: 26px;
-  padding: 5px 0;
+  padding: 5px 1px;
   border-radius: 13px;
   text-align: center;
   font-size: 11px;
